<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <!--右上角侧滑Item-->

    <item
        android:id="@+id/action_theme"
        android:icon="@drawable/biz_main_menu_theme"
        android:orderInCategory="100"
        android:title="@string/theme"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/biz_main_menu_search"
        android:orderInCategory="100"
        android:title="@string/search"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_scan"
        android:icon="@drawable/biz_main_menu_scan"
        android:orderInCategory="100"
        android:title="@string/scan"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_setting"
        android:icon="@drawable/biz_main_menu_setting"
        android:orderInCategory="100"
        android:title="@string/setting"
        app:showAsAction="never"/>


</menu>
